# example-citus-operator

./: .gitignore  Cargo.toml  crd.yml  deploy.yml  readme.md
.github/workflows/: ci.yml
src/: cluster.rs  crd.rs  jobs.rs  lib.rs  main.rs  master.rs  storage.rs  workers.rs
