[package]
name = "example-citus-operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "operator"
path = "src/bin/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.88", default-features = true, features = ["derive", "runtime"] }
k8s-openapi = { version = "0.21", default-features = false, features = ["v1_28"] }
futures = "0.3"
serde = "1"
serde_json = "1"
schemars = "0.8"
anyhow = "1"
thiserror = "1"
log = "0.4"
clap = { version = "4", features = ["derive"] }
